--- a/book-library-app/book-library-app/src/main/resources/application.properties
+++ b/book-library-app/book-library-app/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/book_library_app?createDatabas
 spring.datasource.username=root
 spring.datasource.password=326699
 logging.level.org.hibernate.persister.entity=ERROR
+spring.cloud.compatibility-verifier.enabled=false
